--- a/bin/Messages_en_US.properties
+++ b/bin/Messages_en_US.properties
@@ -1,6 +1,7 @@
 about = About 
 add = Add
 add_to_shopping = Add to shopping
+authors = \n \nAuthors :\nRaphael Baron - raphael.baron@insa-rennes.fr\nXavier Fraboulet - xavier.fraboulet@insa-rennes.fr\nBruno Matry - bruno.matry@insa-rennes.fr\nPaul-Mehdy M\u2019Rabet - paul-mehdy.mrabet@insa-rennes.fr
 cancel = Cancel
 delete = Delete
 details = Details
@@ -20,11 +21,14 @@ modify = Modify
 modifying = Modifying 
 multiple_selection = Use multiple selection
 ok = OK
+orders_fulfilled = Orders fulfilled : 
 order_ticket = Order Ticket
 pay = Pay
 persons = Person
 search = Search
+software_versus = \n \nSoftware versus : 
 statistics = Statistics
+statistics_generals = General Statistics
 ticket_already_given = This ticket has already been given
 ticket_already_paid = This ticket has already been paid
 tickets = Tickets
