--- a/bin/Messages_fr_FR.properties
+++ b/bin/Messages_fr_FR.properties
@@ -1,6 +1,7 @@
 about = A propos de 
 add = Ajouter
 add_to_shopping = Ajouter au panier
+authors = \n \nAuteurs :\nRaphael Baron - raphael.baron@insa-rennes.fr\nXavier Fraboulet - xavier.fraboulet@insa-rennes.fr\nBruno Matry - bruno.matry@insa-rennes.fr\nPaul-Mehdy M\u2019Rabet - paul-mehdy.mrabet@insa-rennes.fr
 cancel = Annuler
 delete = Supprimer
 details = Details
@@ -20,11 +21,14 @@ modify = Modifier
 modifying = Modification de
 multiple_selection = Utiliser la selection multiple
 ok = OK
+orders_fulfilled = Commandes effectuees : 
 order_ticket = Commander Billet
 pay = Payer
 persons = Personnes
 search = Rechercher
+software_versus = \n \nVersion du logiciel : 
 statistics = Statistiques
+statistics_generals = Statistiques generales
 ticket_already_given = Ce billet a deja ete donne
 ticket_already_paid = Ce billet a deja ete paye
 tickets = Billets
