--- a/src/Messages.properties
+++ b/src/Messages.properties
@@ -1,3 +1,1 @@
-titreOngletPersonne = Personnes
-titreOngletBillet = Billets
-annuler = Annuler
+names = Raphael Baron - raphael.baron@insa-rennes.fr\nXavier Fraboulet - xavier.fraboulet@insa-rennes.fr\nBruno Matry - bruno.matry@insa-rennes.fr\nPaul-Mehdy M\u2019Rabet - paul-mehdy.mrabet@insa-rennes.fr
