--- a/bin/Messages_en_US.properties
+++ b/bin/Messages_en_US.properties
@@ -25,12 +25,16 @@ orders_fulfilled = Orders fulfilled :
 order_ticket = Order Ticket
 pay = Pay
 persons = Person
+recipe = Recipe : 
 search = Search
 software_versus = \n \nSoftware versus : 
 statistics = Statistics
 statistics_generals = General Statistics
+statistics_modify_date = Change date for statistics management (DD/MM/YYYY) 
+statistics_since = Statistics since 
 ticket_already_given = This ticket has already been given
 ticket_already_paid = This ticket has already been paid
+ticket_order_for = Ticket order for 
 tickets = Tickets
 validate = Validate
 warning = Warning
