--- a/src/Messages_fr_FR.properties
+++ b/src/Messages_fr_FR.properties
@@ -25,12 +25,16 @@ orders_fulfilled = Commandes effectuees :
 order_ticket = Commander Billet
 pay = Payer
 persons = Personnes
+recipe = Recette : 
 search = Rechercher
 software_versus = \n \nVersion du logiciel : 
 statistics = Statistiques
 statistics_generals = Statistiques generales
+statistics_modify_date = Modifier la date pour la gestion des statistiques (JJ/MM/AAAA) : 
+statistics_since = Statistiques depuis le 
 ticket_already_given = Ce billet a deja ete donne
 ticket_already_paid = Ce billet a deja ete paye
+ticket_order_for = Commande de billet pour 
 tickets = Billets
 validate = Valider
 warning = Attention
