Correction bug langue modifier

--- a/bin/Messages_en_US.properties
+++ b/bin/Messages_en_US.properties
@@ -17,6 +17,7 @@ error_traduction = An error has occurred while translating
 error_unexpected = Caution, an unexpected error occurred :\n
 force = Force
 give = Give
+modification = Modification of 
 modify = Modify
 modifying = Modifying 
 multiple_selection = Use multiple selection
