--- a/src/Messages_fr_FR.properties
+++ b/src/Messages_fr_FR.properties
@@ -17,6 +17,7 @@ error_traduction = Une erreur s'est produite lors de la traduction
 error_unexpected = Attention, une erreur inattendue s'est produite :\n
 force = Forcer
 give = Donner
+modification = Modification de 
 modify = Modifier
 modifying = Modification de
 multiple_selection = Utiliser la selection multiple
