--- a/src/Messages_en_US.properties
+++ b/src/Messages_en_US.properties
@@ -22,6 +22,8 @@ modify = Modify
 modifying = Modifying 
 multiple_selection = Use multiple selection
 ok = OK
+option_multiselection = multiple selection for suppression
+option_language = Software language
 orders_fulfilled = Orders fulfilled : 
 order_ticket = Order Ticket
 pay = Pay
