--- a/src/Messages_fr_FR.properties
+++ b/src/Messages_fr_FR.properties
@@ -22,6 +22,8 @@ modify = Modifier
 modifying = Modification de
 multiple_selection = Utiliser la selection multiple
 ok = OK
+option_multiselection = Selection multiple pour la suppression
+option_language = Choix de la langue
 orders_fulfilled = Commandes effectuees : 
 order_ticket = Commander Billet
 pay = Payer
