--- a/bin/Messages_fr.properties
+++ b/bin/Messages_fr.properties
@@ -1,43 +1,66 @@
 about = A propos de 
 add = Ajouter
 add_to_shopping = Ajouter au panier
-authors = \n \nAuteurs :\nRaphael Baron - raphael.baron@insa-rennes.fr\nXavier Fraboulet - xavier.fraboulet@insa-rennes.fr\nBruno Matry - bruno.matry@insa-rennes.fr\nPaul-Mehdy M\u2019Rabet - paul-mehdy.mrabet@insa-rennes.fr
+add_new_ticket = Ajouter un nouveau billet
+add_new_person = Ajouter une nouvelle personne
+articles =  articles
+authors = \n \nAuteurs :\n
 cancel = Annuler
+choice_title = Choix de la quantité
+choose_quantity = Choisissez la quantité de billets à commander
+close = Fermer
 delete = Supprimer
+delete_confirmation = Confirmation de la suppression
+delete_query = Voulez-vous vraiment supprimer ?
 details = Details
 error = Erreur
 error_adding = Erreur lors de l'ajout :\nTous les champs n'ont pas été renseignes\n
+error_buying = Erreur d'achat
+error_buying_reduced_tickets = Cette personne a déjà acheté trop de ticket a prix reduit. 
+error_buying_not_enought_tickets = Il n'y a pas assez de billets en stock. 
+error_buying_not_enought_reduced_tickets = Il n'y a pas assez de billets a prix reduit en stock. 
 error_empty_selection = La selection est vide
 error_modifying = Erreur lors de la modification :\nTous les champs n'ont pas été renseignes\n
-error_nobody_selected = Vous n'avez selectionnee personne
-error_no_ticket_selected = Vous n'avez pas de selectionne de billet
+error_nobody_selected = Vous n'avez selectionné personne
+error_no_ticket_selected = Vous n'avez pas selectionné de billet
 error_purchase = Une erreur s'est produite lors de votre achat\nLa commande a été annulee
 error_quantity_choice = Erreur dans le choix de la quantite\nCommande de ce billet annulee\n
 error_traduction = Une erreur s'est produite lors de la traduction
 error_unexpected = Attention, une erreur inattendue s'est produite :\n
+fields_not_filled = Les champs ne sont pas remplis
 force = Forcer
 give = Donner
+given_person = Donné à la personne
+information_about = Informations sur les achat de
+left_to_pay = Restant a payer
 modification = Modification de 
 modify = Modifier
 modifying = Modification de
 multiple_selection = Utiliser la selection multiple
+non_existent = non existante
+object_id = Objet d'id
+object_index = Objet d'index
 ok = OK
 option_multiselection = Selection multiple pour la suppression
 option_language = Choix de la langue
 orders_fulfilled = Commandes effectuees : 
 order_ticket = Commander Billet
+paid_person = Payé par la personne
 pay = Payer
 persons = Personnes
 recipe = Recette : 
 search = Rechercher
+shopping = Mon panier
 software_versus = \n \nVersion du logiciel : 
 statistics = Statistiques
-statistics_generals = Statistiques generales
+statistics_generals = Statistiques générales
 statistics_modify_date = Modifier la date pour la gestion des statistiques (JJ/MM/AAAA) : 
 statistics_since = Statistiques depuis le 
-ticket_already_given = Ce billet a deja ete donne
-ticket_already_paid = Ce billet a deja ete paye
+subsidizes_ticket = Billet subventionné
+ticket_already_given = Ce billet a déjà été donné
+ticket_already_paid = Ce billet a déjà été payé
 ticket_order_for = Commande de billet pour 
 tickets = Billets
 validate = Valider
+validate_anyway = Voulez-vous quand meme valider cet achat ?
 warning = Attention
