--- a/src/Messages_en.properties
+++ b/src/Messages_en.properties
@@ -1,12 +1,24 @@
 about = About 
 add = Add
 add_to_shopping = Add to shopping
-authors = \n \nAuthors :\nRaphael Baron - raphael.baron@insa-rennes.fr\nXavier Fraboulet - xavier.fraboulet@insa-rennes.fr\nBruno Matry - bruno.matry@insa-rennes.fr\nPaul-Mehdy M\u2019Rabet - paul-mehdy.mrabet@insa-rennes.fr
+add_new_ticket = Add new ticket
+add_new_person = Add new person
+articles =  articles
+authors = \n \nAuthors :\n
 cancel = Cancel
+choice_title = Amount of tickets
+choose_quantity = Selecting the amount of tickets
+close = Close
 delete = Delete
+delete_confirmation = Delete confirmation
+delete_query = Do you really want to delete?
 details = Details
 error = Error
 error_adding = Error while adding :\nsome fields have not been filled\n
+error_buying = Error while buying
+error_buying_reduced_tickets = This person has already bought too much reduced tickets. 
+error_buying_not_enought_tickets = There are not enough tickets. 
+error_buying_not_enought_reduced_tickets = There are not enough reduced tickets. 
 error_empty_selection = The selection is empty
 error_modifying = Error while modifying :\nsome fields have not been filled\n
 error_nobody_selected = Nobody was selected
@@ -15,29 +27,40 @@ error_purchase = An error has occurred while processing your purchase\nThe order
 error_quantity_choice = An error has occurred while choosing of the amount of the order\nThe order was canceled\n
 error_traduction = An error has occurred while translating
 error_unexpected = Caution, an unexpected error occurred :\n
+fields_not_filled = Fields are not filled
 force = Force
 give = Give
+given_person = Given
+information_about = Informations about
+left_to_pay = Left to pay
 modification = Modification of 
 modify = Modify
 modifying = Modifying 
 multiple_selection = Use multiple selection
+non_existent = non existent
+object_id = Object with id
+object_index = Object with index
 ok = OK
 option_multiselection = multiple selection for suppression
 option_language = Software language
 orders_fulfilled = Orders fulfilled : 
 order_ticket = Order Ticket
+paid_person = Paid
 pay = Pay
-persons = Person
+persons = Persons
 recipe = Recipe : 
 search = Search
+shopping = Shopping
 software_versus = \n \nSoftware versus : 
 statistics = Statistics
 statistics_generals = General Statistics
 statistics_modify_date = Change date for statistics management (DD/MM/YYYY) 
 statistics_since = Statistics since 
+subsidizes_ticket = Subsidizes ticket
 ticket_already_given = This ticket has already been given
 ticket_already_paid = This ticket has already been paid
 ticket_order_for = Ticket order for 
 tickets = Tickets
 validate = Validate
+validate_anyway = Do you want to validate the purchase anyway?
 warning = Warning
