--- a/src/Messages_en.properties
+++ b/src/Messages_en.properties
@@ -1,4 +1,4 @@
-about = About 
+about = Acerca 
 add = Add
 add_to_shopping = Add to shopping
 add_new_ticket = Add new ticket
@@ -41,7 +41,7 @@ non_existent = non existent
 object_id = Object with id
 object_index = Object with index
 ok = OK
-option_multiselection = multiple selection for suppression
+option_multiselection = Multiple selection for suppression
 option_language = Software language
 orders_fulfilled = Orders fulfilled : 
 order_ticket = Order Ticket
