--- a/src/Messages_en.properties
+++ b/src/Messages_en.properties
@@ -43,12 +43,12 @@ object_index = Object with index
 ok = OK
 option_multiselection = Multiple selection for suppression
 option_language = Software language
-orders_fulfilled = Orders fulfilled : 
+orders_fulfilled = Orders fulfilled
 order_ticket = Order Ticket
 paid_person = Paid
 pay = Pay
 persons = Persons
-recipe = Recipe : 
+recipe = Recipe
 search = Search
 shopping = Shopping
 software_versus = \n \nSoftware versus : 
