--- a/src/Messages_fr.properties
+++ b/src/Messages_fr.properties
@@ -43,12 +43,12 @@ object_index = Objet d'index
 ok = OK
 option_multiselection = Selection multiple pour la suppression
 option_language = Choix de la langue
-orders_fulfilled = Commandes effectuees : 
+orders_fulfilled = Commandes effectuees
 order_ticket = Commander Billet
 paid_person = Payé par la personne
 pay = Payer
 persons = Personnes
-recipe = Recette : 
+recipe = Recette
 search = Rechercher
 shopping = Mon panier
 software_versus = \n \nVersion du logiciel : 
