--- a/src/Messages_sp.properties
+++ b/src/Messages_sp.properties
@@ -43,12 +43,12 @@ object_index = Objeto con el indice
 ok = OK
 option_multiselection = Seleccion multiple para supresion
 option_language = Idioma Software
-orders_fulfilled = Ordenes cumplidas 
+orders_fulfilled = Ordenes cumplidas
 order_ticket = Order Ticket
 paid_person = Pagado
 pay = Pago
 persons = Personas
-recipe = Receta:
+recipe = Receta
 search = Buscar
 shopping = Shopping
 software_versus = \n \nSoftware frente: 
