--- a/bin/Messages_sp.properties
+++ b/bin/Messages_sp.properties
@@ -4,7 +4,7 @@ add_to_shopping = Anadir a la cesta
 add_new_ticket = Anadir nuevo ticket
 add_new_person = Anadir nueva persona
 articles =  articulos
-authors = \n \nAutores:\n
+authors = Autores
 cancel = Cancelar
 choice_title = Cantidad de entradas
 choose_quantity = Seleccion de la cantidad de entradas
@@ -51,10 +51,9 @@ persons = Personas
 recipe = Receta
 search = Buscar
 shopping = Shopping
-software_versus = \n \nSoftware frente: 
+software_versus = Software frente
 statistics = Estadisticas
 statistics_generals = Estadisticas Generales
-statistics_modify_date = Cambiar la fecha para la gestion de estadisticas (DD / MM / AAAA)
 statistics_since = Estadisticas desde
 subsidizes_ticket = Subsidia la compra de entradas
 ticket_already_given = Este billete ya se ha dado
