--- a/src/Messages_en.properties
+++ b/src/Messages_en.properties
@@ -4,7 +4,7 @@ add_to_shopping = Add to shopping
 add_new_ticket = Add new ticket
 add_new_person = Add new person
 articles =  articles
-authors = \n \nAuthors :\n
+authors = Authors
 cancel = Cancel
 choice_title = Amount of tickets
 choose_quantity = Selecting the amount of tickets
@@ -51,10 +51,9 @@ persons = Persons
 recipe = Recipe
 search = Search
 shopping = Shopping
-software_versus = \n \nSoftware versus : 
+software_versus = Software versus
 statistics = Statistics
 statistics_generals = General Statistics
-statistics_modify_date = Change date for statistics management (DD/MM/YYYY) 
 statistics_since = Statistics since 
 subsidizes_ticket = Subsidizes ticket
 ticket_already_given = This ticket has already been given
