--- a/src/Messages_fr.properties
+++ b/src/Messages_fr.properties
@@ -4,7 +4,7 @@ add_to_shopping = Ajouter au panier
 add_new_ticket = Ajouter un nouveau billet
 add_new_person = Ajouter une nouvelle personne
 articles =  articles
-authors = \n \nAuteurs :\n
+authors = Auteurs
 cancel = Annuler
 choice_title = Choix de la quantité
 choose_quantity = Choisissez la quantité de billets à commander
@@ -51,10 +51,9 @@ persons = Personnes
 recipe = Recette
 search = Rechercher
 shopping = Mon panier
-software_versus = \n \nVersion du logiciel : 
+software_versus = Version du logiciel
 statistics = Statistiques
 statistics_generals = Statistiques générales
-statistics_modify_date = Modifier la date pour la gestion des statistiques (JJ/MM/AAAA) : 
 statistics_since = Statistiques depuis le 
 subsidizes_ticket = Billet subventionné
 ticket_already_given = Ce billet a déjà été donné
