--- a/bin/Messages_fr.properties
+++ b/bin/Messages_fr.properties
@@ -49,6 +49,9 @@ paid_person = Payé par la personne
 pay = Payer
 persons = Personnes
 recipe = Recette
+reset_Quota = RAZ Quota
+reset_Confirmation = Confirmatation de la remise à zero des quota
+reset_query = Voulez-vous vraiment remettre à zero les quota pour ce billet ?
 search = Rechercher
 shopping = Mon panier
 software_versus = Version du logiciel
