--- a/src/Messages_en.properties
+++ b/src/Messages_en.properties
@@ -49,6 +49,9 @@ paid_person = Paid
 pay = Pay
 persons = Persons
 recipe = Recipe
+reset_Quota = Reset Quota
+reset_Confirmation = Confirmatation for the reseting of the quotas
+reset_query = Do you really want to reset the quotas ?
 search = Search
 shopping = Shopping
 software_versus = Software versus
