--- a/src/Messages_sp.properties
+++ b/src/Messages_sp.properties
@@ -49,6 +49,9 @@ paid_person = Pagado
 pay = Pago
 persons = Personas
 recipe = Receta
+reset_Quota = Puesta Quota
+reset_Confirmation = Puesta Quota Confirmation
+reset_query = ¿Realmente quiere resetar las quotas?
 search = Buscar
 shopping = Shopping
 software_versus = Software frente
