--- a/src/Messages_fr.properties
+++ b/src/Messages_fr.properties
@@ -41,6 +41,7 @@ non_existent = non existante
 object_id = Objet d'id
 object_index = Objet d'index
 ok = OK
+options = Options
 option_multiselection = Selection multiple pour la suppression
 option_language = Choix de la langue
 orders_fulfilled = Commandes effectuees
