--- a/src/Messages_sp.properties
+++ b/src/Messages_sp.properties
@@ -1,4 +1,4 @@
-about = About 
+about = Acerca 
 add = Anadir
 add_to_shopping = Anadir a la cesta
 add_new_ticket = Anadir nuevo ticket
@@ -41,6 +41,7 @@ non_existent = inexistente
 object_id = Objeto con id
 object_index = Objeto con el indice
 ok = OK
+options = Opciones
 option_multiselection = Seleccion multiple para supresion
 option_language = Idioma Software
 orders_fulfilled = Ordenes cumplidas
