--- a/src/Messages_fr.properties
+++ b/src/Messages_fr.properties
@@ -66,3 +66,6 @@ tickets = Billets
 validate = Valider
 validate_anyway = Voulez-vous quand meme valider cet achat ?
 warning = Attention
+mail = Mail
+name = Nom
+firstname = Prénom
