Ajout : langue dynamique pour les attributs

--- a/bin/Messages_en.properties
+++ b/bin/Messages_en.properties
@@ -67,3 +67,19 @@ tickets = Tickets
 validate = Validate
 validate_anyway = Do you want to validate the purchase anyway?
 warning = Warning
+mail = Mail
+name = Name
+firstname = Firstname
+category = Category
+subcategory = Sub-category
+price = Price
+price_sub = Reduced Price
+qt = Quantity
+qt_sub = Subsidized Quantity
+qt_sub_per = Quantity Sub/Per
+price_total = Total Price
+price_uni = Price/Unit
+sub = Subsidized
+given = Given
+paid = Paid
+date = Date
