--- a/bin/Messages_pt.properties
+++ b/bin/Messages_pt.properties
@@ -50,6 +50,9 @@ paid_person = Pago
 pay = Pagar
 persons = Pessoas
 recipe = Receita
+reset_Quota = Puesta Quota
+reset_Confirmation = Puesta Quota Confirmation
+reset_query = ¿Realmente quiere resetar las quotas?
 search = Pesquisar
 shopping = Compras
 software_versus = Software contra
@@ -64,3 +67,19 @@ tickets = Bilhetes
 validate = Validar
 validate_anyway = Voce quer validar a compra de qualquer maneira?
 warning = Aviso
+mail = Mail
+name = Name
+firstname = Firstname
+category = Catégorie
+subcategory = Sous catégorie
+price = Prix
+price_sub = Prix Subventionné
+qt = Quantité
+qt_sub = Quantité Subventionnée
+qt_sub_per = Quantité Sub/Per
+price_total = Prix Total
+price_uni = Prix Unitaire
+sub = Subventionné
+given = Donné
+paid = Payé
+date = Date
