--- a/src/Messages_fr.properties
+++ b/src/Messages_fr.properties
@@ -70,3 +70,16 @@ warning = Attention
 mail = Mail
 name = Nom
 firstname = Prénom
+category = Catégorie
+subcategory = Sous catégorie
+price = Prix
+price_sub = Prix Subventionné
+qt = Quantité
+qt_sub = Quantité Subventionnée
+qt_sub_per = Quantité Sub/Per
+price_total = Prix Total
+price_uni = Prix Unitaire
+sub = Subventionné
+given = Donné
+paid = Payé
+date = Date
