--- a/src/Messages_it.properties
+++ b/src/Messages_it.properties
@@ -50,6 +50,9 @@ paid_person = Pagato
 pay = Pagare
 persons = Persone
 recipe = Ricetta
+reset_Quota = Puesta Quota
+reset_Confirmation = Puesta Quota Confirmation
+reset_query = ¿Realmente quiere resetar las quotas?
 search = Ricerca
 shopping = Acquisti
 software_versus = Software contro
@@ -64,3 +67,19 @@ tickets = Biglietti
 validate = Convalidare
 validate_anyway = Vuoi per convalidare l'acquisto in ogni caso?
 warning = Attenzione
+mail = Mail
+name = Name
+firstname = Firstname
+category = Catégorie
+subcategory = Sous catégorie
+price = Prix
+price_sub = Prix Subventionné
+qt = Quantité
+qt_sub = Quantité Subventionnée
+qt_sub_per = Quantité Sub/Per
+price_total = Prix Total
+price_uni = Prix Unitaire
+sub = Subventionné
+given = Donné
+paid = Payé
+date = Date
