--- a/src/Messages_sp.properties
+++ b/src/Messages_sp.properties
@@ -67,3 +67,19 @@ tickets = Entradas
 validate = Validar
 validate_anyway = ¿Desea validar la compra de todos modos?
 warning = Advertencia
+mail = Mail
+name = Name
+firstname = Firstname
+category = Catégorie
+subcategory = Sous catégorie
+price = Prix
+price_sub = Prix Subventionné
+qt = Quantité
+qt_sub = Quantité Subventionnée
+qt_sub_per = Quantité Sub/Per
+price_total = Prix Total
+price_uni = Prix Unitaire
+sub = Subventionné
+given = Donné
+paid = Payé
+date = Date
