Ajout : compléter une commande(IHM)

--- a/bin/Messages_en.properties
+++ b/bin/Messages_en.properties
@@ -65,7 +65,7 @@ ticket_already_paid = This ticket has already been paid
 ticket_order_for = Ticket order for 
 tickets = Tickets
 validate = Validate
-validate_anyway = Do you want to validate the purchase anyway?
+validate_anyway = If you want to validate your purchase, press Force. \nIf you want to comple with non-subsidized tickets, press Complete.\n Otherwise press Cancel
 warning = Warning
 mail = Mail
 name = Name
@@ -83,3 +83,4 @@ sub = Subsidized
 given = Given
 paid = Paid
 date = Date
+complete = Complete
