--- a/bin/Messages_fr.properties
+++ b/bin/Messages_fr.properties
@@ -65,7 +65,7 @@ ticket_already_paid = Ce billet a déjà été payé
 ticket_order_for = Commande de billet pour 
 tickets = Billets
 validate = Valider
-validate_anyway = Voulez-vous quand meme valider cet achat ?
+validate_anyway = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSi vous souhaitez compléter la commande avec des billets non subventionnés, appuyez sur Compléter.\nSinon, appuyer sur Annuler
 warning = Attention
 mail = Mail
 name = Nom
@@ -83,3 +83,4 @@ sub = Subventionné
 given = Donné
 paid = Payé
 date = Date
+complete = Compléter
