--- a/bin/Messages_it.properties
+++ b/bin/Messages_it.properties
@@ -57,7 +57,7 @@ search = Ricerca
 shopping = Acquisti
 software_versus = Software contro
 statistics = Statistiche
-statistics_generals = Statistiche Generali
+statistics_generals = Statistiche Generaliéter
 statistics_since = Statistiche dal 
 subsidizes_ticket = Sovvenziona biglietto
 ticket_already_given = Questo biglietto e gia stato dato
@@ -83,3 +83,4 @@ sub = Subventionné
 given = Donné
 paid = Payé
 date = Date
+complete = Compléter
