Langues : fenetre modifier

--- a/bin/Messages_fr.properties
+++ b/bin/Messages_fr.properties
@@ -64,6 +64,8 @@ ticket_already_given = Ce billet a déjà été donné
 ticket_already_paid = Ce billet a déjà été payé
 ticket_order_for = Commande de billet pour 
 tickets = Billets
+ticket_normal = Billet Normal
+ticket_subsidized = Billet Subventionné
 validate = Valider
 validate_anyway = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSi vous souhaitez compléter la commande avec des billets non subventionnés, appuyez sur Compléter.\nSinon, appuyer sur Annuler
 warning = Attention
