--- a/bin/Messages_it.properties
+++ b/bin/Messages_it.properties
@@ -63,8 +63,9 @@ subsidizes_ticket = Sovvenziona biglietto
 ticket_already_given = Questo biglietto e gia stato dato
 ticket_already_paid = Questo biglietto e gia stato pagato
 ticket_order_for = Ordine Biglietto 
-tickets = Biglietti
-validate = Convalidare
+tickets = Tickets
+ticket_normal = Normal Ticket
+ticket_subsidized = Subsidized Ticketvalidate = Convalidare
 validate_anyway = Vuoi per convalidare l'acquisto in ogni caso?
 warning = Attenzione
 mail = Mail
