--- a/bin/Messages_sp.properties
+++ b/bin/Messages_sp.properties
@@ -63,8 +63,9 @@ subsidizes_ticket = Subsidia la compra de entradas
 ticket_already_given = Este billete ya se ha dado
 ticket_already_paid = Este boleto ya ha sido pagado
 ticket_order_for = Para entradas de 
-tickets = Entradas
-validate = Validar
+tickets = Tickets
+ticket_normal = Normal Ticket
+ticket_subsidized = Subsidized Ticketvalidate = Validar
 validate_anyway = ¿Desea validar la compra de todos modos?
 warning = Advertencia
 mail = Mail
