--- a/src/Messages_en.properties
+++ b/src/Messages_en.properties
@@ -64,6 +64,8 @@ ticket_already_given = This ticket has already been given
 ticket_already_paid = This ticket has already been paid
 ticket_order_for = Ticket order for 
 tickets = Tickets
+ticket_normal = Normal Ticket
+ticket_subsidized = Subsidized Ticket
 validate = Validate
 validate_anyway = If you want to validate your purchase, press Force. \nIf you want to comple with non-subsidized tickets, press Complete.\n Otherwise press Cancel
 warning = Warning
