--- a/src/Messages_pt.properties
+++ b/src/Messages_pt.properties
@@ -63,8 +63,9 @@ subsidizes_ticket = Subsidia bilhete
 ticket_already_given = Este bilhete ja foi dado
 ticket_already_paid = Este bilhete ja tenha sido pago
 ticket_order_for = Ordem bilhete para 
-tickets = Bilhetes
-validate = Validar
+tickets = Tickets
+ticket_normal = Normal Ticket
+ticket_subsidized = Subsidized Ticketvalidate = Validar
 validate_anyway = Voce quer validar a compra de qualquer maneira?
 warning = Aviso
 mail = Mail
