Correction : Methode completer ne marchait pas correctement

--- a/bin/Messages_en.properties
+++ b/bin/Messages_en.properties
@@ -68,6 +68,7 @@ ticket_normal = Normal Ticket
 ticket_subsidized = Subsidized Ticket
 validate = Validate
 validate_anyway = If you want to validate your purchase, press Force. \nIf you want to comple with non-subsidized tickets, press Complete.\n Otherwise press Cancel
+validate_anyway_force = If you want to validate your purchase, press Force.\n Otherwise press Cancel
 warning = Warning
 mail = Mail
 name = Name
