--- a/bin/Messages_fr.properties
+++ b/bin/Messages_fr.properties
@@ -68,6 +68,7 @@ ticket_normal = Billet Normal
 ticket_subsidized = Billet Subventionné
 validate = Valider
 validate_anyway = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSi vous souhaitez compléter la commande avec des billets non subventionnés, appuyez sur Compléter.\nSinon, appuyer sur Annuler
+validate_anyway_force = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSinon, appuyer sur Annuler
 warning = Attention
 mail = Mail
 name = Nom
