--- a/bin/Messages_pt.properties
+++ b/bin/Messages_pt.properties
@@ -67,6 +67,7 @@ tickets = Tickets
 ticket_normal = Normal Ticket
 ticket_subsidized = Subsidized Ticketvalidate = Validar
 validate_anyway = Voce quer validar a compra de qualquer maneira?
+validate_anyway_force = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSinon, appuyer sur Annuler
 warning = Aviso
 mail = Mail
 name = Name
