--- a/bin/Messages_it.properties
+++ b/bin/Messages_it.properties
@@ -67,6 +67,7 @@ tickets = Tickets
 ticket_normal = Normal Ticket
 ticket_subsidized = Subsidized Ticketvalidate = Convalidare
 validate_anyway = Vuoi per convalidare l'acquisto in ogni caso?
+validate_anyway_force = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSinon, appuyer sur Annuler
 warning = Attenzione
 mail = Mail
 name = Name
