--- a/src/Messages_sp.properties
+++ b/src/Messages_sp.properties
@@ -67,6 +67,7 @@ tickets = Tickets
 ticket_normal = Normal Ticket
 ticket_subsidized = Subsidized Ticketvalidate = Validar
 validate_anyway = ¿Desea validar la compra de todos modos?
+validate_anyway_force = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSinon, appuyer sur Annuler
 warning = Advertencia
 mail = Mail
 name = Name
