--- a/bin/Messages_pt.properties
+++ b/bin/Messages_pt.properties
@@ -65,24 +65,25 @@ ticket_already_paid = Este bilhete ja tenha sido pago
 ticket_order_for = Ordem bilhete para 
 tickets = Tickets
 ticket_normal = Normal Ticket
-ticket_subsidized = Subsidized Ticketvalidate = Validar
+ticket_subsidized = Subsidized Ticket
+validate = Validar
 validate_anyway = Voce quer validar a compra de qualquer maneira?
-validate_anyway_force = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSinon, appuyer sur Annuler
+validate_anyway_force = Se voce deseja validar a compra de qualquer maneira, imprensa Force.\nSe nao, prima Cancelar
 warning = Aviso
 mail = Mail
-name = Name
-firstname = Firstname
-category = Catégorie
-subcategory = Sous catégorie
-price = Prix
-price_sub = Prix Subventionné
-qt = Quantité
-qt_sub = Quantité Subventionnée
-qt_sub_per = Quantité Sub/Per
-price_total = Prix Total
-price_uni = Prix Unitaire
-sub = Subventionné
-given = Donné
-paid = Payé
-date = Date
-complete = Compléter
+name = Nome
+firstname = Nome
+category = Categoria
+subcategory = Sub Categoria
+price = Preco
+price_sub = Precos subsidiados
+qt = Quantidade
+qt_sub = Quantidade Subsidiados
+qt_sub_per = Quantites Sub/Ind
+price_total = Preco total
+price_uni = Preço
+sub = Subsidiados
+given = Dado
+paid = Pago
+date = Data
+complete = Completar
