--- a/bin/Messages_sp.properties
+++ b/bin/Messages_sp.properties
@@ -64,25 +64,26 @@ ticket_already_given = Este billete ya se ha dado
 ticket_already_paid = Este boleto ya ha sido pagado
 ticket_order_for = Para entradas de 
 tickets = Tickets
-ticket_normal = Normal Ticket
-ticket_subsidized = Subsidized Ticketvalidate = Validar
+ticket_normal = Ticket normal
+ticket_subsidized = Ticket Subsidiado
+validate = Validar
 validate_anyway = ¿Desea validar la compra de todos modos?
-validate_anyway_force = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSinon, appuyer sur Annuler
+validate_anyway_force = Si desea validar la compra de todos modos, pulse la Fuerza.\nSi lo contrario, pulse Cancelar
 warning = Advertencia
 mail = Mail
-name = Name
-firstname = Firstname
+name = Nombre
+firstname = Nombre
 category = Catégorie
-subcategory = Sous catégorie
-price = Prix
-price_sub = Prix Subventionné
-qt = Quantité
-qt_sub = Quantité Subventionnée
-qt_sub_per = Quantité Sub/Per
-price_total = Prix Total
-price_uni = Prix Unitaire
-sub = Subventionné
-given = Donné
-paid = Payé
-date = Date
-complete = Compléter
+subcategory = Sategoria
+price = Precio
+price_sub = Precios subsidiados
+qt = Cantidad
+qt_sub = Cantidad Subsidiados
+qt_sub_per = Cantidad Sub/Per
+price_total = Precio Total
+price_uni = Precio
+sub = Subvencionado
+given = Dado
+paid = Pagado
+date = Fecha
+complete = Completar
