--- a/bin/Messages_it.properties
+++ b/bin/Messages_it.properties
@@ -63,26 +63,27 @@ subsidizes_ticket = Sovvenziona biglietto
 ticket_already_given = Questo biglietto e gia stato dato
 ticket_already_paid = Questo biglietto e gia stato pagato
 ticket_order_for = Ordine Biglietto 
-tickets = Tickets
-ticket_normal = Normal Ticket
-ticket_subsidized = Subsidized Ticketvalidate = Convalidare
+tickets = Biglietti
+ticket_normal = Biglietto Normale
+ticket_subsidized = Subsidized Ticket
+validate = Convalidare
 validate_anyway = Vuoi per convalidare l'acquisto in ogni caso?
-validate_anyway_force = Si vous voulez quand meme valider cet achat, appuyer sur Forcer.\nSinon, appuyer sur Annuler
+validate_anyway_force = Se si desidera convalidare l'acquisto in ogni caso, premere Forza.\nSe non, premere Annulla
 warning = Attenzione
 mail = Mail
-name = Name
-firstname = Firstname
-category = Catégorie
-subcategory = Sous catégorie
-price = Prix
-price_sub = Prix Subventionné
-qt = Quantité
-qt_sub = Quantité Subventionnée
-qt_sub_per = Quantité Sub/Per
-price_total = Prix Total
-price_uni = Prix Unitaire
-sub = Subventionné
-given = Donné
-paid = Payé
-date = Date
-complete = Compléter
+name = Nome
+firstname = Cognome
+category = Categoria
+subcategory = Sub Categoria
+price = Prezzo
+price_sub = Prezzi agevolati
+qt = Quantita
+qt_sub = Quantita agevolati
+qt_sub_per = Quantita Age/Per
+price_total = Totale Prezzo
+price_uni = Prezzo
+sub = Finanziato
+given = Dato
+paid = Pagato
+date = Data
+complete = Completare
